tolk-tester/tests/invalid-syntax/err-3319.tolk
fun t(): (int, int) asm (-> 1222222222222222222222222222222223 0) "NOP"

/**
@compilation_should_fail
@stderr expected `)`, got `1222222222222222222222222222222223`
 */
